# ComfyUI-SamplingPlanner

./: README.md  nodes.py  pyproject.toml  wan22_planner.py
.github/workflows/: publish.yml
docs/: comfy-sampler-parity.md  wan22-sigma-evidence.md
tests/: test_nodes_smoke.py  test_wan22_planner.py
