[project]
name = "ComfyUI-SamplingPlanner"
description = "Task-aware Wan 2.2 sampling plans and sampler-specific breakout nodes for ComfyUI."
version = "0.3.0"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/boobkake22/ComfyUI-SamplingPlanner"

[tool.comfy]
PublisherId = "boobkake22"
DisplayName = "Sampling Planner"
